# Compiler_Design

hw3/: .merlin  Makefile  a.out  analysis_test_script  backend.ml  callback1_bug.asm  callback1_clang_platformml  dune  main.ml  main.native  sharedtests  sharedtests.ml  test_script
hw3/_build/: _digests  _log  backend.cmi  backend.cmo  backend.cmx  backend.ml  backend.ml.depends  dbernhard.cmi  dbernhard.cmo  dbernhard.cmx  dbernhard.ml.depends  driver.cmi  driver.cmo  driver.cmx  gradedtests.cmi  gradedtests.cmo  gradedtests.cmx  haenniro.cmi  haenniro.cmo  haenniro.cmx  haenniro.ml.depends  main.cmi  main.cmo  main.cmx  main.native  nicdard.cmi  nicdard.cmo  nicdard.cmx  nicdard.ml.depends  sharedtests.cmi  sharedtests.cmo  sharedtests.cmx  sharedtests.ml.depends  studenttests.cmi  studenttests.cmo  studenttests.cmx  studenttests.ml  studenttests.ml.depends  zikai.cmi  zikai.cmo  (+2 more)
hw3/_build/util/: platform.cmi  platform.cmo  platform.cmx  platform.ml
hw3/ll_main_programs/: alloca1_v2.ll
hw3/output/: add.s  add_twice.s  alloca1.s  analysis3.s  and.s  br1.s  call8.s  call8_1.s  returnvoid.s
hw4/: frontend.ml  lexer.mll  main.ml  main.native  parser.mly  studenttests.ml
hw4/_build/: _digests  _log  dbernhard.cmi  dbernhard.cmo  dbernhard.cmx  driver.cmi  driver.cmo  driver.cmx  frontend.cmi  frontend.cmo  frontend.cmx  frontend.ml  (+38 more)
hw5/: a.out  dbernhard.ml  frontend.ml  main.ml  main.native  sharedtests.ml  studenttests.ml  team.txt  typechecker.ml
hw6/: a.out  backend.ml  constprop.ml  dce.ml  gradedtests.ml  main.native  printanalysis.native  solver.ml
(+1488 files in other folders)
